# LeagueOfLegendsDrafter

./: .gitignore  .vercelignore  Cargo.toml  README.md  electron-builder.signed.config.cjs  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.cjs  tsconfig.node.json  tsconfig.web.json  vercel.json  vite.tauri.config.ts  vite.web.config.ts  vitest.config.ts
.github/workflows/: bump-release-version.yml  pages.yml  update-public-meta.yml
api/: parse-draft-screenshot.js  player-champion-pool.js  visit.js
crates/nexus-draft-core/: Cargo.toml
crates/nexus-draft-core/src/: lib.rs
docs/: windows-signing.md
draft_v1/: __init__.py  build_aggregates.py  live_feed_adapter.py  load_data.py  load_training_export.py  main.py  schema.sql  scorer.py
draft_v1/data/: champ_tags.json
scripts/: build-tauri-release.ps1  bump-release-version.mjs  riot-lane-etl.mjs  sign-release-artifacts.ps1  smoke-tauri-overlay.ps1  stage-desktop-update-feed.mjs  start-nexusdraft-release.ps1  update-coachless-default-builds.mjs  update-public-meta-diamond-plus.mjs  update-public-meta-mobalytics.mjs  update-ugg-default-builds.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lcu.rs  lib.rs  main.rs  overlay.rs
src/main/: appUpdater.ts  geminiClient.ts  index.ts  lcuClient.ts  livePublicDataFetcher.ts  loadLocalEnv.ts  riotPlayerChampionPool.ts  settingsStore.ts  trainedEffectsLoader.ts
training/: DRAFT_STATE.md  RUNBOOK.txt  __init__.py  export_effects.py  parity_draft_scorers.py  schema.sql  score_v1.py
(+178 files in other folders)
