[package]
name = "nexus-draft-tauri"
version = "4.1.0"
edition = "2021"
description = "Rust desktop shell for Nexus Draft"
publish = false
autobins = false

[[bin]]
name = "NexusDraft"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
nexus-draft-core = { path = "../crates/nexus-draft-core" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
