[package]
name = "nexus-draft-core"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM scoring core for Nexus Draft item matrix plans"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
