[package]
name = "nexus-draft-core"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM scoring core for Nexus Draft item matrix plans"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
